--- a/ORMs/booksTemplates/bookaGUI/templates/book.html
+++ b/ORMs/booksTemplates/bookaGUI/templates/book.html
@@ -1,31 +1,71 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{one_book.title}}</title>
+    <!-- Add Bootstrap CSS link -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>{{one_book.title}}</h1>
-    <h3>ID: {{one_book.id}}</h3>
-    <h4>Description:</h4>
-    <p>{{ one_book.desc }}</p>
-    <h4>Authors:</h4>
-    {% for author in one_book.authors.all %}
-    <ul>
-      <li>{{ author.first_name }} {{ author.last_name }}</li>
-    </ul>
-    {% endfor %}
-    <form action="/add_author_to_the_book/{{one_book.id}}" method="Post">
-      {% csrf_token %}
-      <select name="author">
-        {% for author in select_authors %}
-        <option value="{{author.id}}">
-          {{ author.first_name }} {{ author.last_name }}
-        </option>
-        {% endfor %}
-        <input type="submit" value="Add" />
-      </select>
-    </form>
+    <div class="container">
+      <h1 class="my-4">{{one_book.title}}</h1>
+      <div class="card mb-4">
+        <div class="card-header">
+          <h3>ID: {{one_book.id}}</h3>
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">Description:</h4>
+          <p class="card-text">{{ one_book.desc }}</p>
+          <h4 class="card-title">Authors:</h4>
+          <ul class="list-group">
+            {% for author in one_book.authors.all %}
+            <li class="list-group-item">
+              {{ author.first_name }} {{ author.last_name }}
+            </li>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
+      <form
+        class="form-inline"
+        action="/add_author_to_the_book/{{one_book.id}}"
+        method="post"
+      >
+        {% csrf_token %}
+        <div class="form-group mb-2 mr-2">
+          <select class="form-control" name="author">
+            {% for author in select_authors %}
+            <option value="{{ author.id }}">
+              {{ author.first_name }} {{ author.last_name }}
+            </option>
+            {% endfor %}
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Add</button>
+      </form>
+    </div>
+    <!-- Add Bootstrap JS and jQuery links -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
