--- a/ORMs/booksTemplates/bookaGUI/templates/index.html
+++ b/ORMs/booksTemplates/bookaGUI/templates/index.html
@@ -1,39 +1,86 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Add Bootstrap CSS link -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <title>Books and Authors</title>
   </head>
   <body>
-    <!--  -->
-    <div>
-      <h1>Add a book</h1>
-      <form method="POST" action="/create_book">
-        {% csrf_token %}
-        <label>Title</label>
-        <input type="text" name="title" required>
-        <label>Description</label>
-        <textarea name="desc" required></textarea>
-        <button type="submit">Add</button>
-      </form>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>Add a book</h1>
+          <form method="POST" action="/create_book" class="form-group">
+            {% csrf_token %}
+            <label for="title">Title:</label>
+            <input
+              type="text"
+              name="title"
+              id="title"
+              class="form-control"
+              required
+            />
+            <label for="desc">Description:</label>
+            <textarea
+              name="desc"
+              id="desc"
+              class="form-control"
+              required
+            ></textarea>
+            <button type="submit" class="btn btn-primary mt-2">Add</button>
+          </form>
+        </div>
+      </div>
     </div>
-    <!--  -->
-    <div>
-      <table>
-        <thead>
-          <th>ID</th>
-          <th>Title</th>
-          <th>Action</th>
-        </thead>
-        {%for book in all_books%}
-        <tbody>
-          <td>{{book.id}}</td>
-          <td>{{book.title}}</td>
-          <td><a href="/books/{{book.id}}">View</a></td>
-        </tbody>
-        {%endfor%}
-      </table>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-12">
+          <table class="table table-striped">
+            <thead class="thead-dark">
+              <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for book in all_books %}
+              <tr>
+                <td>{{ book.id }}</td>
+                <td>{{ book.title }}</td>
+                <td>
+                  <a href="/books/{{ book.id }}" class="btn btn-info">View</a>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
+    <!-- Add Bootstrap JS and jQuery links -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
