--- a/ORMs/booksTemplates/bookaGUI/templates/index.html
+++ b/ORMs/booksTemplates/bookaGUI/templates/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-md-12">
           <table class="table table-striped">
-            <thead class="thead-dark">
+            <thead class="thead-light">
               <tr>
                 <th>ID</th>
                 <th>Title</th>
