--- a/ORMs/booksTemplates/bookaGUI/templates/index.html
+++ b/ORMs/booksTemplates/bookaGUI/templates/index.html
@@ -58,6 +58,19 @@
                 <td>{{ book.title }}</td>
                 <td>
                   <a href="/books/{{ book.id }}" class="btn btn-info">View</a>
+                  <a
+                    href="/books/{{book.id}}/update"
+                    class="btn btn-warning"
+                    >Update</a
+                  >
+                  <form
+                    method="POST"
+                    action="/books/{{book.id}}/delete"
+                    class="d-inline"
+                  >
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                  </form>
                 </td>
               </tr>
               {% endfor %}
