--- a/ORMs/Users/TheUsers/templates/profile.html
+++ b/ORMs/Users/TheUsers/templates/profile.html
@@ -3,25 +3,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>profile</title>
   </head>
   <body>
-    <h1>Profile {{ user.first_name }}</h1>
-    <a href="{% url 'logout' %}">Logout</a>
-    <p>First Name: {{ user.first_name }}</p>
-    <p>Last Name: {{ user.last_name }}</p>
-    <p>Username: {{ user.username }}</p>
-    <p>Email: {{ user.email }}</p>
-
-    <form method="post">
-      {% csrf_token %}
-      <label for="bio">Bio:</label>
-      <textarea name="bio">{{ user.profile.bio }}</textarea>
-
-      <label for="image">Profile Image:</label>
-      <input type="file" name="image" />
-
-      <button type="submit">Save</button>
-    </form>
+    <h1 class="text-center my-4">Profile - {{ user.first_name }}</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card">
+            <img src="{{ user.profile.image.url }}" class="card-img-top" alt="{{ user.username }}">
+            <div class="card-body">
+              <h5 class="card-title">{{ user.first_name }} {{ user.last_name }}</h5>
+              <p class="card-text">{{ user.username }}</p>
+              <p class="card-text">{{ user.email }}</p>
+              <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+              <a href="{% url 'create_post' %}" class="btn btn-secondary">Create Post</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9">
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="bio">Bio:</label>
+              <textarea name="bio" class="form-control">{{ user.profile.bio }}</textarea>
+            </div>
+            <div class="form-group">
+              <label for="gender">Gender:</label>
+              <select name="gender" class="form-control">
+                <option value="M" {% if user.profile.gender == "M" %}selected{% endif %}>Male</option>
+                <option value="F" {% if user.profile.gender == "F" %}selected{% endif %}>Female</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="image">Profile Image:</label>
+              <input type="file" name="image" class="form-control-file">
+            </div>
+            <button type="submit" class="btn btn-primary">Save</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
+  
 </html>
