--- a/ORMs/Users/TheUsers/templates/user_edit.html
+++ b/ORMs/Users/TheUsers/templates/user_edit.html
@@ -3,16 +3,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>User Edit</title>
   </head>
   <body>
-    <h1>Edit User</h1>
-    <form method="post">
-      {% csrf_token %}
-      <input type="text" name="first_name" placeholder="First Name" value="{{ user.first_name }}" />
-      <input type="text" name="last_name" placeholder="Last Name" value="{{ user.last_name }}" />
-      <input type="email" name="email" value="{{ user.email }}" />
-      <input type="submit" value="Save" />
-    </form>
+    <div class="container mt-5">
+      <h1 class="text-center mb-3">Edit User</h1>
+      <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="first_name">First Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="first_name"
+            name="first_name"
+            value="{{ user.first_name }}"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="last_name">Last Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="last_name"
+            name="last_name"
+            value="{{ user.last_name }}"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            value="{{ user.email }}"
+            required
+          />
+        </div>
+        <br>
+        <button type="submit" class="btn btn-primary">Save</button>
+      </form>
+    </div>
   </body>
 </html>
