--- a/ORMs/Belt/redBelt/templates/quotes.html
+++ b/ORMs/Belt/redBelt/templates/quotes.html
@@ -1,21 +1,18 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>Home</title>
+    <title>Quotes</title>
   </head>
   <body>
-    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Welcome {{ user.username }}!</a>
+        <a class="navbar-brand">Quotes</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -30,25 +27,45 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'edit_profile' user.id %}"
-                >profile</a
-              >
+              <a class="nav-link" href="/home/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/quotes/"
-                >Quotes</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout/">Logout</a>
+              <a class="nav-link" href="/logout">Logout</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <!-- contant -->
+
     <div class="container mt-3">
       <h1 class="mb-4">Quotes</h1>
+
+      <form method="POST">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="author" class="form-label">Author:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="author"
+            name="author"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <label for="text" class="form-label">Quote:</label>
+          <textarea
+            class="form-control"
+            id="text"
+            name="text"
+            required
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Quote</button>
+      </form>
+
+      <hr />
+      <!--  -->
       {% if quotes %}
       <ul class="list-group">
         {% for quote in quotes %} {% with like_count=quote.likes.count %}
@@ -58,14 +75,31 @@
           <p class="mb-1">
             You have {{ like_count }} like{{ like_count|pluralize }}
           </p>
-          <p class="mb-1">
-            Created by -
+          <p class="card-text">
+            Posted by
             <a href="{% url 'user_quotes' quote.addby.id %}"
               >{{ quote.addby.username }}</a
             >
+            {% if user.id == quote.addby.id %}
+            <a
+              href="{% url 'delete_quote' quote.id %}"
+              class="btn btn-danger btn-sm"
+              >Delete</a
+            >
+            {% endif %}
+            <a
+              href="{% url 'like_quote' quote.id %}"
+              class="btn btn-secondary btn-sm"
+              >Like</a
+            >
+            <a
+              href="{% url 'unlike_quote' quote.id %}"
+              class="btn btn-primary btn-sm"
+              >Unlike</a
+            >
           </p>
         </li>
-        {% endwith %}{% endfor %}
+        {% endwith %} {% endfor %}
       </ul>
       {% else %}
       <p>No quotes found.</p>
